ejercicio 1/parser.output
Terminals which are not used

   TOKEN_EQUALS


Grammar

    0 $accept: prog $end

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L body TOKEN_LLAVE_R

    2 body: sentencias

    3 sentencias: /* empty */
    4           | sentencia sentencias

    5 sentencia: decl
    6          | asign
    7          | ret

    8 decl: var
    9     | cts

   10 var: type TOKEN_ID TOKEN_PUNTO_Y_COMA
   11    | type asign

   12 cts: TOKEN_CONST type asign

   13 asign: TOKEN_ID TOKEN_ASSIGN value TOKEN_PUNTO_Y_COMA

   14 ret: TOKEN_RETURN value TOKEN_PUNTO_Y_COMA

   15 value: expr
   16      | exprBool

   17 expr: TOKEN_NUM
   18     | TOKEN_ID
   19     | expr TOKEN_MAS expr
   20     | expr TOKEN_MENOS expr
   21     | expr TOKEN_DIV expr
   22     | expr TOKEN_MULT expr

   23 exprBool: TOKEN_VAL_BOOL
   24         | exprBool TOKEN_AND exprBool
   25         | exprBool TOKEN_OR exprBool

   26 type: TOKEN_INT
   27     | TOKEN_BOOL

   28 return_type: TOKEN_VOID
   29            | TOKEN_BOOL
   30            | TOKEN_INT


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_VOID (258) 28
TOKEN_RETURN (259) 14
TOKEN_ASSIGN (260) 13
TOKEN_EQUALS (261)
TOKEN_CONST (262) 12
TOKEN_ID (263) 1 10 13 18
TOKEN_PUNTO_Y_COMA (264) 10 13 14
TOKEN_NUM (265) 17
TOKEN_VAL_BOOL (266) 23
TOKEN_OR (267) 25
TOKEN_AND (268) 24
TOKEN_BOOL (269) 27 29
TOKEN_INT (270) 26 30
TOKEN_MAS (271) 19
TOKEN_MENOS (272) 20
TOKEN_MULT (273) 22
TOKEN_DIV (274) 21
TOKEN_PAREN_L (275) 1
TOKEN_PAREN_R (276) 1
TOKEN_LLAVE_L (277) 1
TOKEN_LLAVE_R (278) 1


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
prog (25)
    on left: 1, on right: 0
body (26)
    on left: 2, on right: 1
sentencias (27)
    on left: 3 4, on right: 2 4
sentencia (28)
    on left: 5 6 7, on right: 4
decl (29)
    on left: 8 9, on right: 5
var (30)
    on left: 10 11, on right: 8
cts (31)
    on left: 12, on right: 9
asign (32)
    on left: 13, on right: 6 11 12
ret (33)
    on left: 14, on right: 7
value (34)
    on left: 15 16, on right: 13 14
expr (35)
    on left: 17 18 19 20 21 22, on right: 15 19 20 21 22
exprBool (36)
    on left: 23 24 25, on right: 16 24 25
type (37)
    on left: 26 27, on right: 10 11 12
return_type (38)
    on left: 28 29 30, on right: 1


state 0

    0 $accept: . prog $end

    TOKEN_VOID  shift, and go to state 1
    TOKEN_BOOL  shift, and go to state 2
    TOKEN_INT   shift, and go to state 3

    prog         go to state 4
    return_type  go to state 5


state 1

   28 return_type: TOKEN_VOID .

    $default  reduce using rule 28 (return_type)


state 2

   29 return_type: TOKEN_BOOL .

    $default  reduce using rule 29 (return_type)


state 3

   30 return_type: TOKEN_INT .

    $default  reduce using rule 30 (return_type)


state 4

    0 $accept: prog . $end

    $end  shift, and go to state 6


state 5

    1 prog: return_type . TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L body TOKEN_LLAVE_R

    TOKEN_ID  shift, and go to state 7


state 6

    0 $accept: prog $end .

    $default  accept


state 7

    1 prog: return_type TOKEN_ID . TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L body TOKEN_LLAVE_R

    TOKEN_PAREN_L  shift, and go to state 8


state 8

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L . TOKEN_PAREN_R TOKEN_LLAVE_L body TOKEN_LLAVE_R

    TOKEN_PAREN_R  shift, and go to state 9


state 9

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R . TOKEN_LLAVE_L body TOKEN_LLAVE_R

    TOKEN_LLAVE_L  shift, and go to state 10


state 10

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L . body TOKEN_LLAVE_R

    TOKEN_RETURN  shift, and go to state 11
    TOKEN_CONST   shift, and go to state 12
    TOKEN_ID      shift, and go to state 13
    TOKEN_BOOL    shift, and go to state 14
    TOKEN_INT     shift, and go to state 15

    $default  reduce using rule 3 (sentencias)

    body        go to state 16
    sentencias  go to state 17
    sentencia   go to state 18
    decl        go to state 19
    var         go to state 20
    cts         go to state 21
    asign       go to state 22
    ret         go to state 23
    type        go to state 24


state 11

   14 ret: TOKEN_RETURN . value TOKEN_PUNTO_Y_COMA

    TOKEN_ID        shift, and go to state 25
    TOKEN_NUM       shift, and go to state 26
    TOKEN_VAL_BOOL  shift, and go to state 27

    value     go to state 28
    expr      go to state 29
    exprBool  go to state 30


state 12

   12 cts: TOKEN_CONST . type asign

    TOKEN_BOOL  shift, and go to state 14
    TOKEN_INT   shift, and go to state 15

    type  go to state 31


state 13

   13 asign: TOKEN_ID . TOKEN_ASSIGN value TOKEN_PUNTO_Y_COMA

    TOKEN_ASSIGN  shift, and go to state 32


state 14

   27 type: TOKEN_BOOL .

    $default  reduce using rule 27 (type)


state 15

   26 type: TOKEN_INT .

    $default  reduce using rule 26 (type)


state 16

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L body . TOKEN_LLAVE_R

    TOKEN_LLAVE_R  shift, and go to state 33


state 17

    2 body: sentencias .

    $default  reduce using rule 2 (body)


state 18

    4 sentencias: sentencia . sentencias

    TOKEN_RETURN  shift, and go to state 11
    TOKEN_CONST   shift, and go to state 12
    TOKEN_ID      shift, and go to state 13
    TOKEN_BOOL    shift, and go to state 14
    TOKEN_INT     shift, and go to state 15

    $default  reduce using rule 3 (sentencias)

    sentencias  go to state 34
    sentencia   go to state 18
    decl        go to state 19
    var         go to state 20
    cts         go to state 21
    asign       go to state 22
    ret         go to state 23
    type        go to state 24


state 19

    5 sentencia: decl .

    $default  reduce using rule 5 (sentencia)


state 20

    8 decl: var .

    $default  reduce using rule 8 (decl)


state 21

    9 decl: cts .

    $default  reduce using rule 9 (decl)


state 22

    6 sentencia: asign .

    $default  reduce using rule 6 (sentencia)


state 23

    7 sentencia: ret .

    $default  reduce using rule 7 (sentencia)


state 24

   10 var: type . TOKEN_ID TOKEN_PUNTO_Y_COMA
   11    | type . asign

    TOKEN_ID  shift, and go to state 35

    asign  go to state 36


state 25

   18 expr: TOKEN_ID .

    $default  reduce using rule 18 (expr)


state 26

   17 expr: TOKEN_NUM .

    $default  reduce using rule 17 (expr)


state 27

   23 exprBool: TOKEN_VAL_BOOL .

    $default  reduce using rule 23 (exprBool)


state 28

   14 ret: TOKEN_RETURN value . TOKEN_PUNTO_Y_COMA

    TOKEN_PUNTO_Y_COMA  shift, and go to state 37


state 29

   15 value: expr .
   19 expr: expr . TOKEN_MAS expr
   20     | expr . TOKEN_MENOS expr
   21     | expr . TOKEN_DIV expr
   22     | expr . TOKEN_MULT expr

    TOKEN_MAS    shift, and go to state 38
    TOKEN_MENOS  shift, and go to state 39
    TOKEN_MULT   shift, and go to state 40
    TOKEN_DIV    shift, and go to state 41

    $default  reduce using rule 15 (value)


state 30

   16 value: exprBool .
   24 exprBool: exprBool . TOKEN_AND exprBool
   25         | exprBool . TOKEN_OR exprBool

    TOKEN_OR   shift, and go to state 42
    TOKEN_AND  shift, and go to state 43

    $default  reduce using rule 16 (value)


state 31

   12 cts: TOKEN_CONST type . asign

    TOKEN_ID  shift, and go to state 13

    asign  go to state 44


state 32

   13 asign: TOKEN_ID TOKEN_ASSIGN . value TOKEN_PUNTO_Y_COMA

    TOKEN_ID        shift, and go to state 25
    TOKEN_NUM       shift, and go to state 26
    TOKEN_VAL_BOOL  shift, and go to state 27

    value     go to state 45
    expr      go to state 29
    exprBool  go to state 30


state 33

    1 prog: return_type TOKEN_ID TOKEN_PAREN_L TOKEN_PAREN_R TOKEN_LLAVE_L body TOKEN_LLAVE_R .

    $default  reduce using rule 1 (prog)


state 34

    4 sentencias: sentencia sentencias .

    $default  reduce using rule 4 (sentencias)


state 35

   10 var: type TOKEN_ID . TOKEN_PUNTO_Y_COMA
   13 asign: TOKEN_ID . TOKEN_ASSIGN value TOKEN_PUNTO_Y_COMA

    TOKEN_ASSIGN        shift, and go to state 32
    TOKEN_PUNTO_Y_COMA  shift, and go to state 46


state 36

   11 var: type asign .

    $default  reduce using rule 11 (var)


state 37

   14 ret: TOKEN_RETURN value TOKEN_PUNTO_Y_COMA .

    $default  reduce using rule 14 (ret)


state 38

   19 expr: expr TOKEN_MAS . expr

    TOKEN_ID   shift, and go to state 25
    TOKEN_NUM  shift, and go to state 26

    expr  go to state 47


state 39

   20 expr: expr TOKEN_MENOS . expr

    TOKEN_ID   shift, and go to state 25
    TOKEN_NUM  shift, and go to state 26

    expr  go to state 48


state 40

   22 expr: expr TOKEN_MULT . expr

    TOKEN_ID   shift, and go to state 25
    TOKEN_NUM  shift, and go to state 26

    expr  go to state 49


state 41

   21 expr: expr TOKEN_DIV . expr

    TOKEN_ID   shift, and go to state 25
    TOKEN_NUM  shift, and go to state 26

    expr  go to state 50


state 42

   25 exprBool: exprBool TOKEN_OR . exprBool

    TOKEN_VAL_BOOL  shift, and go to state 27

    exprBool  go to state 51


state 43

   24 exprBool: exprBool TOKEN_AND . exprBool

    TOKEN_VAL_BOOL  shift, and go to state 27

    exprBool  go to state 52


state 44

   12 cts: TOKEN_CONST type asign .

    $default  reduce using rule 12 (cts)


state 45

   13 asign: TOKEN_ID TOKEN_ASSIGN value . TOKEN_PUNTO_Y_COMA

    TOKEN_PUNTO_Y_COMA  shift, and go to state 53


state 46

   10 var: type TOKEN_ID TOKEN_PUNTO_Y_COMA .

    $default  reduce using rule 10 (var)


state 47

   19 expr: expr . TOKEN_MAS expr
   19     | expr TOKEN_MAS expr .
   20     | expr . TOKEN_MENOS expr
   21     | expr . TOKEN_DIV expr
   22     | expr . TOKEN_MULT expr

    TOKEN_MULT  shift, and go to state 40
    TOKEN_DIV   shift, and go to state 41

    $default  reduce using rule 19 (expr)


state 48

   19 expr: expr . TOKEN_MAS expr
   20     | expr . TOKEN_MENOS expr
   20     | expr TOKEN_MENOS expr .
   21     | expr . TOKEN_DIV expr
   22     | expr . TOKEN_MULT expr

    TOKEN_MULT  shift, and go to state 40
    TOKEN_DIV   shift, and go to state 41

    $default  reduce using rule 20 (expr)


state 49

   19 expr: expr . TOKEN_MAS expr
   20     | expr . TOKEN_MENOS expr
   21     | expr . TOKEN_DIV expr
   22     | expr . TOKEN_MULT expr
   22     | expr TOKEN_MULT expr .

    $default  reduce using rule 22 (expr)


state 50

   19 expr: expr . TOKEN_MAS expr
   20     | expr . TOKEN_MENOS expr
   21     | expr . TOKEN_DIV expr
   21     | expr TOKEN_DIV expr .
   22     | expr . TOKEN_MULT expr

    $default  reduce using rule 21 (expr)


state 51

   24 exprBool: exprBool . TOKEN_AND exprBool
   25         | exprBool . TOKEN_OR exprBool
   25         | exprBool TOKEN_OR exprBool .

    $default  reduce using rule 25 (exprBool)


state 52

   24 exprBool: exprBool . TOKEN_AND exprBool
   24         | exprBool TOKEN_AND exprBool .
   25         | exprBool . TOKEN_OR exprBool

    $default  reduce using rule 24 (exprBool)


state 53

   13 asign: TOKEN_ID TOKEN_ASSIGN value TOKEN_PUNTO_Y_COMA .

    $default  reduce using rule 13 (asign)
